; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_source_draw_async_texture.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_source_draw_async_texture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source = type { i32 }

@OBS_EFFECT_DEFAULT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"Draw\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.obs_source*)* @obs_source_draw_async_texture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @obs_source_draw_async_texture(%struct.obs_source* %0) #0 {
  %2 = alloca %struct.obs_source*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.obs_source* %0, %struct.obs_source** %2, align 8
  %6 = call i32* (...) @gs_get_effect()
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp ne i32* %7, null
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  store i32 %10, i32* %4, align 4
  store i32* null, i32** %5, align 8
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %22

13:                                               ; preds = %1
  %14 = load i32, i32* @OBS_EFFECT_DEFAULT, align 4
  %15 = call i32* @obs_get_base_effect(i32 %14)
  store i32* %15, i32** %3, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = call i32* @gs_effect_get_technique(i32* %16, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i32* %17, i32** %5, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @gs_technique_begin(i32* %18)
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @gs_technique_begin_pass(i32* %20, i32 0)
  br label %22

22:                                               ; preds = %13, %1
  %23 = load %struct.obs_source*, %struct.obs_source** %2, align 8
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @obs_source_draw_texture(%struct.obs_source* %23, i32* %24)
  %26 = load i32, i32* %4, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %22
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @gs_technique_end_pass(i32* %29)
  %31 = load i32*, i32** %5, align 8
  %32 = call i32 @gs_technique_end(i32* %31)
  br label %33

33:                                               ; preds = %28, %22
  ret void
}

declare dso_local i32* @gs_get_effect(...) #1

declare dso_local i32* @obs_get_base_effect(i32) #1

declare dso_local i32* @gs_effect_get_technique(i32*, i8*) #1

declare dso_local i32 @gs_technique_begin(i32*) #1

declare dso_local i32 @gs_technique_begin_pass(i32*, i32) #1

declare dso_local i32 @obs_source_draw_texture(%struct.obs_source*, i32*) #1

declare dso_local i32 @gs_technique_end_pass(i32*) #1

declare dso_local i32 @gs_technique_end(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
